# dragonfox-drive

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-release.yml  release-binaries.yml
docs/: api.md  crypto-design.md  streaming.md
docs/superpowers/plans/: 2026-06-23-auth-implementation.md  2026-06-23-on-demand-video-streaming.md  2026-06-23-p1-file-upload-download.md  2026-06-23-p2a-chunked-upload-preview.md  2026-06-23-p2b-sw-video-streaming.md  2026-06-23-unit-test-coverage.md  2026-06-24-mse-mp4-playback.md  2026-06-24-p3-folder-tree.md  2026-06-25-ui-redesign.md  2026-06-26-i18n-shares-columns-download.md
docs/superpowers/specs/: 2026-06-23-auth-implementation-design.md  2026-06-23-on-demand-video-streaming-design.md  2026-06-23-p1-file-upload-download-design.md  2026-06-23-p2a-chunked-upload-preview-design.md  2026-06-23-p2b-sw-video-streaming-design.md  2026-06-23-unit-test-coverage-design.md  2026-06-24-mse-mp4-playback-design.md  2026-06-24-p3-folder-tree-design.md  2026-06-25-device-management-design.md  (+2 more)
server/: Cargo.toml  config.toml
server/migrations/: 20260101000000_initial.sql  20260101000001_rename_email_to_username.sql  20260101000002_files_file_key.sql  20260101000003_folders.sql  20260101000004_devices_revocation.sql  20260101000005_devices_drop_revoked_at.sql
server/src/: config.rs  crypto.rs  error.rs  main.rs  models.rs  state.rs
server/src/api/: assets.rs  auth.rs  devices.rs  files.rs  folders.rs  health.rs  mod.rs  public.rs  shares.rs
server/src/auth/: mod.rs
server/src/db/: mod.rs
server/src/storage/: mod.rs
server/src/util/: ua.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: theme-init.js
web/src/: App.vue  main.ts
(+131 files in other folders)
