[package]
name = "dragonfox-drive"
version = "0.1.0"
edition = "2021"
description = "High-performance end-to-end encrypted cloud drive (zero-trust backend)"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dragonfox-drive"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "compression-br"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Crypto primitives (server only does hashing/verification of client-derived tokens)
rand = "0.8"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = "0.15"

# Embedded frontend (single-binary deployment)
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Misc
bytes = "1"
once_cell = "1"
url = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
